# yirang-onnx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  vcpkg.json
OnnxCli/: CMakeLists.txt  Configurations.cpp  Configurations.h  InputBuilder.cpp  InputBuilder.h  InputProject.cpp  InputProject.h  RunCommand.cpp  RunCommand.h  RunSupport.cpp  RunSupport.h  TensorConvert.cpp  TensorConvert.h  input_project.sample.json  main.cpp  yirang_onnx_configurations.json  yirang_onnx_configurations.sample.json
OnnxInference/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  SessionTuning.h  Tensor.h
OnnxParser/: CMakeLists.txt  ModelTypes.h  OnnxModel.cpp  OnnxModel.h
cmake/vcpkg-triplets/: arm64-osx.cmake  homebrew-llvm.cmake
examples/: .gitignore  README.md  job_auto.json  job_bench.json  job_path.json  job_seed.json  make_input.py  make_linear.py
examples/models/: linear.onnx
examples/tensors/: input.pb
tests/: CMakeLists.txt  ConfigurationsTests.cpp  InferenceEngineTests.cpp  InputBuilderTests.cpp  InputProjectTests.cpp  OnnxModelTests.cpp  RunSupportTests.cpp  TensorConvertTests.cpp  cli_smoke.cmake
